tests/script_errors/lexer_bad_hex/error.txt
Error: 
    1 | let f = 0xg;
      |         ^^^ An invalid hexadecimal